# hydrayt

./: README.md  pubspec.yaml
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/data/: guild.dart  local_guild.dart  token.dart  user.dart
lib/models/: guild_model.dart  video_model.dart
lib/providers/: guild_model.dart  setup_provider.dart  user_provider.dart  video_model.dart
lib/services/: token_grabber.dart
lib/widgets/: add_server_dialog.dart  add_server_final_dialog.dart  add_server_manually_dialog.dart  bottom_bar.dart  left_bar.dart  main_screen.dart  profile_dialog.dart  select_button.dart  server_button.dart  server_button_network.dart  settings_screen.dart  setup_screen.dart  simple_dialog.dart  title_bar.dart  user_select_dialog.dart  video_card.dart
plugins/hydra_helper/: .metadata  README.md  pubspec.yaml
plugins/hydra_helper/example/: pubspec.yaml
plugins/hydra_helper/lib/: hydra_helper.dart  hydra_helper_method_channel.dart  hydra_helper_platform_interface.dart
plugins/hydra_helper/windows/: CMakeLists.txt  hydra_helper_plugin.cpp  hydra_helper_plugin.h  hydra_helper_plugin_c_api.cpp
plugins/hydra_helper_2/: README.md  ffigen.yaml  pubspec.yaml
plugins/hydra_helper_2/example/: README.md  pubspec.yaml
plugins/hydra_helper_2/src/: CMakeLists.txt  hydra_helper.c
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+18 files in other folders)
